--- a/task3.html
+++ b/task3.html
@@ -8,7 +8,6 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <h2>
         <center><u>TODO LIST</u></center>
@@ -26,13 +25,8 @@
             </div>
             <button class="clear-btn" onclick="clearButton()">Clear Completed</button>     
         </div>
-        <ul class="task-box">
-
-        </ul>
-
+        <ul class="task-box"></ul>
     </div>
-
     <script src="./todo.js"></script>
 </body>
-
 </html>
